// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Polkadot Staking > cancel deferred slash with bad origin > cancel deferred slash events with bad origin 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 70000)",
          "refTime": "(rounded 1500000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > chill other > chill other bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x15000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 6200)",
          "refTime": "(rounded 980000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > chill other > chill other bad origin events 2`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x15000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 6200)",
          "refTime": "(rounded 980000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > chill other > chill other bad origin events 3`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x15000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 6200)",
          "refTime": "(rounded 980000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > chill other > chill other bad origin events 4`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x15000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 6200)",
          "refTime": "(rounded 980000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > chill other > chill other bad origin events 5`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x15000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 6200)",
          "refTime": "(rounded 980000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > chill other > chill other bad origin events 6`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x15000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 6200)",
          "refTime": "(rounded 980000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > chill other > chill other bad origin events 7`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x15000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 6200)",
          "refTime": "(rounded 980000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > chill other > chill other events 1`] = `
[
  {
    "data": {
      "stash": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    },
    "method": "Chilled",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > force apply validator commission > force apply min commission events 1`] = `
[
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 3500)",
          "refTime": "(rounded 270000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > modify validator count > increase validator count bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 210000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > modify validator count > scale validator count bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 210000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > modify validator count > set validator count bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 210000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > set invulnerables with bad origin > events when setting invulnerables with bad staking admin origin 1`] = `
[
  {
    "data": {
      "id": null,
      "result": {
        "Err": "BadOrigin",
      },
      "task": "(redacted)",
    },
    "method": "Dispatched",
    "section": "scheduler",
  },
]
`;

exports[`Polkadot Staking > set invulnerables with bad origin > set invulnerables events with bad signed origin 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 210000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > set minimum validator commission > set staking configs bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 210000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > set staking configs > set staking configs bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 720000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > set staking configs > set staking configs event 1`] = `
{
  "event": {
    "data": [
      {
        "class": "Mandatory",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 1500)",
          "refTime": "(rounded 260000000)",
        },
      },
    ],
    "index": "0x0000",
  },
  "phase": {
    "applyExtrinsic": 0,
  },
  "topics": [],
}
`;

exports[`Polkadot Staking > staking lifecycle > chill events 1`] = `
[
  {
    "data": {
      "stash": "13piny9qppZ5hvZyxpbRiDDGFLa1rwqHkqxe5iDLQ7TXGdnM",
    },
    "method": "Chilled",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > events when attempting to nominate a blocked validator 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x14000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 14000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > kick events 1`] = `
[
  {
    "data": {
      "nominator": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
      "stash": "13piny9qppZ5hvZyxpbRiDDGFLa1rwqHkqxe5iDLQ7TXGdnM",
    },
    "method": "Kicked",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > nominate events 1`] = `[]`;

exports[`Polkadot Staking > staking lifecycle > nominator bond events 1`] = `
[
  {
    "data": {
      "amount": 100000000000000,
      "stash": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > nominator bond extra events 1`] = `
[
  {
    "data": {
      "amount": 100000000000000,
      "stash": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > unbond events 1`] = `
[
  {
    "data": {
      "amount": 50000000000000,
      "stash": "13piny9qppZ5hvZyxpbRiDDGFLa1rwqHkqxe5iDLQ7TXGdnM",
    },
    "method": "Unbonded",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > validate (blocked) events 1`] = `
[
  {
    "data": {
      "prefs": {
        "blocked": true,
        "commission": "0.00%",
      },
      "stash": "13piny9qppZ5hvZyxpbRiDDGFLa1rwqHkqxe5iDLQ7TXGdnM",
    },
    "method": "ValidatorPrefsSet",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > validator 0 bond events 1`] = `
[
  {
    "data": {
      "amount": 50000000000000,
      "stash": "13piny9qppZ5hvZyxpbRiDDGFLa1rwqHkqxe5iDLQ7TXGdnM",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > validator 0 validate events 1`] = `
[
  {
    "data": {
      "prefs": {
        "blocked": false,
        "commission": "0.00%",
      },
      "stash": "13piny9qppZ5hvZyxpbRiDDGFLa1rwqHkqxe5iDLQ7TXGdnM",
    },
    "method": "ValidatorPrefsSet",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > validator 1 bond events 1`] = `
[
  {
    "data": {
      "amount": 50000000000000,
      "stash": "15KNQmEzwTTVzdDqa1ox9VaWSASEcboQHDLoiXbXDnwnZVzn",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > validator 1 validate events 1`] = `
[
  {
    "data": {
      "prefs": {
        "blocked": false,
        "commission": "0.00%",
      },
      "stash": "15KNQmEzwTTVzdDqa1ox9VaWSASEcboQHDLoiXbXDnwnZVzn",
    },
    "method": "ValidatorPrefsSet",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > validator 2 bond events 1`] = `
[
  {
    "data": {
      "amount": 50000000000000,
      "stash": "13H7FnvuDAYZWhvRzJuNDd1Jrdm91bnWBuD9dqN1HJZAeNt9",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > validator 2 validate events 1`] = `
[
  {
    "data": {
      "prefs": {
        "blocked": false,
        "commission": "0.00%",
      },
      "stash": "13H7FnvuDAYZWhvRzJuNDd1Jrdm91bnWBuD9dqN1HJZAeNt9",
    },
    "method": "ValidatorPrefsSet",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > test fast unstake > nominate events 1`] = `[]`;

exports[`Polkadot Staking > test fast unstake > nominator bond events 1`] = `
[
  {
    "data": {
      "amount": 100000000000000,
      "stash": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > test fast unstake > register fast unstake events 1`] = `[]`;

exports[`Polkadot Staking > test force unstaking of nominator > force unstake bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 6200)",
          "refTime": "(rounded 1600000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > trying to become a validator with no bonded funds fails > events when attempting to validate with no bonded funds 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x00000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 4600)",
          "refTime": "(rounded 850000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > trying to nominate with no bonded funds fails > events when attempting to nominate with no bonded funds 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x00000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 8800)",
          "refTime": "(rounded 990000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > unapplied slash > balances slash events 1`] = `
[
  {
    "data": {
      "amount": 5000000000000,
      "who": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Slashed",
    "section": "balances",
  },
  {
    "data": {
      "amount": 10000000000000,
      "who": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "Slashed",
    "section": "balances",
  },
  {
    "data": {
      "amount": 10000000000000,
      "who": "1TUmpQQUiXWobQcoUMcqxbAuw6PW9KQaKAZe3bjv3fFaWSy",
    },
    "method": "Slashed",
    "section": "balances",
  },
]
`;

exports[`Polkadot Staking > unapplied slash > staking slash events 1`] = `
[
  {
    "data": {
      "amount": 5000000000000,
      "staker": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Slashed",
    "section": "staking",
  },
  {
    "data": {
      "amount": 10000000000000,
      "staker": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "Slashed",
    "section": "staking",
  },
  {
    "data": {
      "amount": 10000000000000,
      "staker": "1TUmpQQUiXWobQcoUMcqxbAuw6PW9KQaKAZe3bjv3fFaWSy",
    },
    "method": "Slashed",
    "section": "staking",
  },
]
`;
